# fastapi-ticker-hub

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/: config.py  main.py  polling.py  polling_worker.py  publisher.py  shared.py  socket.py  state.py
tests/: conftest.py  test_config.py  test_main.py  test_polling.py  test_socket.py  test_state.py
